--- a/FluentConsole.Net.csproj
+++ b/FluentConsole.Net.csproj
@@ -8,18 +8,20 @@
     <ApplicationIcon>command.ico</ApplicationIcon>
     <PackageIcon>command.png</PackageIcon>
     <Title>FluentConsole.Net  , Using .Net Console In Elegant Way !</Title>
-    <Version>1.0.8557</Version>
+    <Version>1.0.8561</Version>
     <Authors>Shayan Firoozi &lt;shayan.firoozi@gmail.com&gt;</Authors>
     <Company>TrendSoft®</Company>
-    <Description>Working with .Net Console in elegant way with fluent builder interface.</Description>
+    <Description>Using .Net Console with fluent builder interface with many extension methods.</Description>
     <Copyright>Copyright © 2023 TrendSoft® (MIT License)</Copyright>
     <PackageProjectUrl>https://github.com/ShayanFiroozi/FluentConsole.Net</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ShayanFiroozi/FluentConsole.Net</RepositoryUrl>
     <PackageReadmeFile>README-Nuget.md</PackageReadmeFile>
-    <PackageReleaseNotes>✔ Refactor Write and WriteLine.
-✔ Add more overload for Write and WriteLine
-✔ Add Exception class print on console with normal and JSON format.
-✔ Rename some methods.</PackageReleaseNotes>
+    <PackageReleaseNotes>✔ 1.1.8561 ( 2023-06-10 )
+
+➕ Add **"ToJsonFormat()"** and **"ToStringFormat()"** extension methods to the **"Exception"** class.
+➕ Add **"public FluentConsoleBuilder Write(Exception exception, bool JsonFormat = true)"** method.
+🛠 Fix **"WriteLine(List&lt;int&gt; IntegerList, bool formatted = false)"** method.
+  ⬆  Update **Test App.**</PackageReleaseNotes>
     <PackageTags>console;csharp;dotnet;net7;net6;net48;fluent;helper;c#</PackageTags>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
