Integrate AssemblyInfos Remove Control-Panel useless project.

--- a/FluentConsole.Net.csproj
+++ b/FluentConsole.Net.csproj
@@ -39,5 +39,9 @@
     <Optimize>False</Optimize>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Include="..\..\IRLPR\GlobalAssemblyInfo.cs" Link="GlobalAssemblyInfo.cs" />
+  </ItemGroup>
+
 
 </Project>
